// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`b-banner firstlook + awaps marketing 1`] = `
Object {
  "html": "<div  class=\\"b-banner\\"><div  class=\\"b-banner__content \\"><div  class=\\"b-banner__wrapper\\"><div class=\\"home-link2 direct-desktop    direct-desktop_title_short i-bem home-link2_color_black home-link2_hover_red home-link2_pseudo_yes\\" data-bem=\\"{&quot;direct-desktop&quot;:{&quot;name&quot;:&quot;direct-desktop&quot;}}\\"><div  class=\\"direct-desktop__image-wrapper\\"><div  class=\\"direct-desktop__image\\"></div></div><div  class=\\"direct-desktop__content\\"><div  class=\\"direct-desktop__headline\\"><style  >.direct-desktop__logo{
            background-image: url(//favicon.yandex.net/favicon/undefined?size=32&stub=1)
        }</style><div  class=\\"direct-desktop__logo\\"></div><div  class=\\"direct-desktop__domain\\">ya.ru</div><div  class=\\"direct-desktop__mark\\">РЕКЛАМА</div></div><div  class=\\"direct-desktop__content-text\\">Заголовок</div></div><div  class=\\"direct-close-block direct-close-block_state_idle direct-close-block_desktop direct-close-block_adtune i-bem\\" data-bem=\\"{&quot;direct-close-block&quot;:{}}\\"><button  class=\\"direct-close-block__close-button\\"><div  class=\\"direct-close-block__close-icon-wrapper\\"><div  class=\\"direct-close-block__close-icon\\"></div></div><div  class=\\"direct-close-block__tooltip\\"><div  class=\\"direct-close-block__tooltip-triangle\\"></div><div  class=\\"direct-close-block__tooltip-content\\">Скрыть объявление</div></div></button></div><a class=\\"home-link2 direct-desktop__link\\" href=\\"https://an.yandex.ru/link_1?stat-id=1\\" target=\\"_blank\\" rel=\\"noopener\\"></a></div></div></div></div>",
  "resources": Array [
    Array [
      ".direct-desktop__image{
            background-image: url(\\"//avatars.mds.yandex.net/get-direct/238679/BLFf8_rcQqoJZ5-0jef8Lg/wx1080\\");
            top: 0;
            margin-top: -11.69811320754717%;
            padding-bottom: 55.85%;
            animation-name: a_;
            animation-duration: 6.2s;
            animation-iteration-count: infinite;
            animation-timing-function: linear;}
            
            @keyframes a_{
                0% { transform: translateY(0%);}
                25% {transform: translateY(20.95%);}
                50% {transform: translateY(0%);}
                75% {transform: translateY(-20.95%);}
                100% {transform: translateY(0%);}
            }@media screen and (min-width: 1160px){.direct-desktop__image{
            background-image: url(\\"//avatars.mds.yandex.net/get-direct/238679/BLFf8_rcQqoJZ5-0jef8Lg/wx1080\\");
            top: 0;
            margin-top: -11.645962732919255%;
            padding-bottom: 55.90%;
            animation-name: a_;
            animation-duration: 7s;
            animation-iteration-count: infinite;
            animation-timing-function: linear;}
            }
            @keyframes a_{
                0% { transform: translateY(0%);}
                25% {transform: translateY(20.83%);}
                50% {transform: translateY(0%);}
                75% {transform: translateY(-20.83%);}
                100% {transform: translateY(0%);}
            }",
      "inline-css",
    ],
  ],
  "settingsJs": Array [
    Array [
      "pages",
      "123",
      "banner",
    ],
    Array [
      "bannerMainImage",
      "https://avatars.mds.yandex.net/get-direct/238679/BLFf8_rcQqoJZ5-0jef8Lg/wx1080",
      "timing",
    ],
    Array [
      "isBUnit",
      false,
      "direct",
    ],
    Array [
      "data",
      Object {
        "abuseUrl": "https://an.yandex.ru/abuse_1",
        "adtuneRedesignUrl": "https://an.yandex.ru/link_1?stat-id=1",
        "hideReasons": Array [
          Object {
            "mix": " direct-close-block__close-reason_close",
            "options": "3-2",
            "text": "Не интересуюсь",
          },
          Object {
            "mix": " direct-close-block__close-reason_close",
            "options": "14-2",
            "text": "Уже купил",
          },
          Object {
            "mix": " direct-close-block__close-reason_close",
            "options": "5-3",
            "text": "Спам",
          },
        ],
        "hideReasonsClose": undefined,
        "hideReasonsComplain": undefined,
        "isPremium": undefined,
        "isSocial": false,
        "sendStat": true,
        "statName": "tgo_big",
        "useScrollbar": true,
      },
      "direct-close-block",
    ],
    Array [
      "counters",
      Object {
        "mrcImpressions": undefined,
        "scriptMeasurers": "",
        "shows": Array [
          "https://an.yandex.ru/tgo/tail",
          "https://an.yandex.ru/head+tail_1?stat-id=1",
        ],
        "statPath": "firstlook_tgo",
      },
      "direct",
    ],
    Array [
      "refresh",
      Object {
        "conf": Object {
          "overlapping_timeout": 111,
          "params": Object {},
          "refresh_counts": 222,
          "refresh_url": undefined,
          "tab_timeout": 333,
          "watch_timeout": 444,
        },
        "skipBanner": 6529330059,
      },
      "banner",
    ],
    Array [
      "logs",
      Array [
        Object {
          "action": "отрисовка баннера на сервере",
          "params": Object {
            "id": 6529330059,
            "баннер": "firstlook_tgo",
          },
          "time": 0,
        },
      ],
      "banner",
    ],
    Array [
      "name",
      "firstlook_tgo",
      "banner",
    ],
  ],
}
`;

exports[`b-banner firstlook + statpixel 1`] = `
Object {
  "html": "<div  class=\\"b-banner\\"><div  class=\\"b-banner__content \\"><div  class=\\"b-banner__wrapper\\"><div class=\\"home-link2 direct-desktop    direct-desktop_title_short i-bem home-link2_color_black home-link2_hover_red home-link2_pseudo_yes\\" data-bem=\\"{&quot;direct-desktop&quot;:{&quot;name&quot;:&quot;direct-desktop&quot;}}\\"><div  class=\\"direct-desktop__image-wrapper\\"><div  class=\\"direct-desktop__image\\"></div></div><div  class=\\"direct-desktop__content\\"><div  class=\\"direct-desktop__headline\\"><style  >.direct-desktop__logo{
            background-image: url(//favicon.yandex.net/favicon/undefined?size=32&stub=1)
        }</style><div  class=\\"direct-desktop__logo\\"></div><div  class=\\"direct-desktop__domain\\">ya.ru</div><div  class=\\"direct-desktop__mark\\">РЕКЛАМА</div></div><div  class=\\"direct-desktop__content-text\\">Заголовок</div></div><div  class=\\"direct-close-block direct-close-block_state_idle direct-close-block_desktop direct-close-block_adtune i-bem\\" data-bem=\\"{&quot;direct-close-block&quot;:{}}\\"><button  class=\\"direct-close-block__close-button\\"><div  class=\\"direct-close-block__close-icon-wrapper\\"><div  class=\\"direct-close-block__close-icon\\"></div></div><div  class=\\"direct-close-block__tooltip\\"><div  class=\\"direct-close-block__tooltip-triangle\\"></div><div  class=\\"direct-close-block__tooltip-content\\">Скрыть объявление</div></div></button></div><a class=\\"home-link2 direct-desktop__link\\" href=\\"https://an.yandex.ru/link_1?stat-id=1\\" target=\\"_blank\\" rel=\\"noopener\\"></a></div></div></div></div>",
  "resources": Array [
    Array [
      ".direct-desktop__image{
            background-image: url(\\"//avatars.mds.yandex.net/get-direct/238679/BLFf8_rcQqoJZ5-0jef8Lg/wx1080\\");
            top: 0;
            margin-top: -11.69811320754717%;
            padding-bottom: 55.85%;
            animation-name: a_;
            animation-duration: 6.2s;
            animation-iteration-count: infinite;
            animation-timing-function: linear;}
            
            @keyframes a_{
                0% { transform: translateY(0%);}
                25% {transform: translateY(20.95%);}
                50% {transform: translateY(0%);}
                75% {transform: translateY(-20.95%);}
                100% {transform: translateY(0%);}
            }@media screen and (min-width: 1160px){.direct-desktop__image{
            background-image: url(\\"//avatars.mds.yandex.net/get-direct/238679/BLFf8_rcQqoJZ5-0jef8Lg/wx1080\\");
            top: 0;
            margin-top: -11.645962732919255%;
            padding-bottom: 55.90%;
            animation-name: a_;
            animation-duration: 7s;
            animation-iteration-count: infinite;
            animation-timing-function: linear;}
            }
            @keyframes a_{
                0% { transform: translateY(0%);}
                25% {transform: translateY(20.83%);}
                50% {transform: translateY(0%);}
                75% {transform: translateY(-20.83%);}
                100% {transform: translateY(0%);}
            }",
      "inline-css",
    ],
  ],
  "settingsJs": Array [
    Array [
      "pages",
      "123",
      "banner",
    ],
    Array [
      "bannerMainImage",
      "https://avatars.mds.yandex.net/get-direct/238679/BLFf8_rcQqoJZ5-0jef8Lg/wx1080",
      "timing",
    ],
    Array [
      "isBUnit",
      false,
      "direct",
    ],
    Array [
      "data",
      Object {
        "abuseUrl": "https://an.yandex.ru/abuse_1",
        "adtuneRedesignUrl": "https://an.yandex.ru/link_1?stat-id=1",
        "hideReasons": Array [
          Object {
            "mix": " direct-close-block__close-reason_close",
            "options": "3-2",
            "text": "Не интересуюсь",
          },
          Object {
            "mix": " direct-close-block__close-reason_close",
            "options": "14-2",
            "text": "Уже купил",
          },
          Object {
            "mix": " direct-close-block__close-reason_close",
            "options": "5-3",
            "text": "Спам",
          },
        ],
        "hideReasonsClose": undefined,
        "hideReasonsComplain": undefined,
        "isPremium": undefined,
        "isSocial": false,
        "sendStat": true,
        "statName": "tgo_big",
        "useScrollbar": true,
      },
      "direct-close-block",
    ],
    Array [
      "counters",
      Object {
        "mrcImpressions": undefined,
        "scriptMeasurers": "",
        "shows": Array [
          "https://an.yandex.ru/tgo/tail",
          "https://an.yandex.ru/head+tail_1?stat-id=1",
        ],
        "statPath": "firstlook_tgo",
      },
      "direct",
    ],
    Array [
      "refresh",
      Object {
        "conf": Object {
          "overlapping_timeout": 111,
          "params": Object {},
          "refresh_counts": 222,
          "refresh_url": undefined,
          "tab_timeout": 333,
          "watch_timeout": 444,
        },
        "skipBanner": 6529330059,
      },
      "banner",
    ],
    Array [
      "logs",
      Array [
        Object {
          "action": "отрисовка баннера на сервере",
          "params": Object {
            "id": 6529330059,
            "баннер": "firstlook_tgo",
          },
          "time": 0,
        },
      ],
      "banner",
    ],
    Array [
      "name",
      "firstlook_tgo",
      "banner",
    ],
  ],
}
`;

exports[`b-banner rtbmeta-direct + statpixel 1`] = `
Object {
  "html": "<div  class=\\"b-banner\\"><div  class=\\"b-banner__content \\"><div  class=\\"b-banner__wrapper\\"><div class=\\"home-link2 direct-desktop    direct-desktop_title_short i-bem home-link2_color_black home-link2_hover_red home-link2_pseudo_yes\\" data-bem=\\"{&quot;direct-desktop&quot;:{&quot;name&quot;:&quot;direct-desktop&quot;}}\\"><div  class=\\"direct-desktop__image-wrapper\\"><div  class=\\"direct-desktop__image\\"></div></div><div  class=\\"direct-desktop__content\\"><div  class=\\"direct-desktop__headline\\"><style  >.direct-desktop__logo{
            background-image: url(//favicon.yandex.net/favicon/undefined?size=32&stub=1)
        }</style><div  class=\\"direct-desktop__logo\\"></div><div  class=\\"direct-desktop__domain\\">ya.ru</div><div  class=\\"direct-desktop__mark\\">РЕКЛАМА</div></div><div  class=\\"direct-desktop__content-text\\">Заголовок</div></div><div  class=\\"direct-close-block direct-close-block_state_idle direct-close-block_desktop direct-close-block_adtune i-bem\\" data-bem=\\"{&quot;direct-close-block&quot;:{}}\\"><button  class=\\"direct-close-block__close-button\\"><div  class=\\"direct-close-block__close-icon-wrapper\\"><div  class=\\"direct-close-block__close-icon\\"></div></div><div  class=\\"direct-close-block__tooltip\\"><div  class=\\"direct-close-block__tooltip-triangle\\"></div><div  class=\\"direct-close-block__tooltip-content\\">Скрыть объявление</div></div></button></div><a class=\\"home-link2 direct-desktop__link\\" href=\\"https://an.yandex.ru/link_1?stat-id=1\\" target=\\"_blank\\" rel=\\"noopener\\"></a></div></div></div></div>",
  "resources": Array [
    Array [
      ".direct-desktop__image{
            background-image: url(\\"//avatars.mds.yandex.net/get-direct/238679/BLFf8_rcQqoJZ5-0jef8Lg/wx1080\\");
            top: 0;
            margin-top: -11.69811320754717%;
            padding-bottom: 55.85%;
            animation-name: a_;
            animation-duration: 6.2s;
            animation-iteration-count: infinite;
            animation-timing-function: linear;}
            
            @keyframes a_{
                0% { transform: translateY(0%);}
                25% {transform: translateY(20.95%);}
                50% {transform: translateY(0%);}
                75% {transform: translateY(-20.95%);}
                100% {transform: translateY(0%);}
            }@media screen and (min-width: 1160px){.direct-desktop__image{
            background-image: url(\\"//avatars.mds.yandex.net/get-direct/238679/BLFf8_rcQqoJZ5-0jef8Lg/wx1080\\");
            top: 0;
            margin-top: -11.645962732919255%;
            padding-bottom: 55.90%;
            animation-name: a_;
            animation-duration: 7s;
            animation-iteration-count: infinite;
            animation-timing-function: linear;}
            }
            @keyframes a_{
                0% { transform: translateY(0%);}
                25% {transform: translateY(20.83%);}
                50% {transform: translateY(0%);}
                75% {transform: translateY(-20.83%);}
                100% {transform: translateY(0%);}
            }",
      "inline-css",
    ],
  ],
  "settingsJs": Array [
    Array [
      "pages",
      "123",
      "banner",
    ],
    Array [
      "bannerMainImage",
      "https://avatars.mds.yandex.net/get-direct/238679/BLFf8_rcQqoJZ5-0jef8Lg/wx1080",
      "timing",
    ],
    Array [
      "isBUnit",
      false,
      "direct",
    ],
    Array [
      "data",
      Object {
        "abuseUrl": "https://an.yandex.ru/abuse_1",
        "adtuneRedesignUrl": "https://an.yandex.ru/link_1?stat-id=1",
        "hideReasons": Array [
          Object {
            "mix": " direct-close-block__close-reason_close",
            "options": "3-2",
            "text": "Не интересуюсь",
          },
          Object {
            "mix": " direct-close-block__close-reason_close",
            "options": "14-2",
            "text": "Уже купил",
          },
          Object {
            "mix": " direct-close-block__close-reason_close",
            "options": "5-3",
            "text": "Спам",
          },
        ],
        "hideReasonsClose": undefined,
        "hideReasonsComplain": undefined,
        "isPremium": undefined,
        "isSocial": false,
        "sendStat": true,
        "statName": "tgo_big",
        "useScrollbar": true,
      },
      "direct-close-block",
    ],
    Array [
      "counters",
      Object {
        "mrcImpressions": Array [
          "https://yabs.yandex.ru/tracking/mrcImpressions1",
          "https://yabs.yandex.ru/tracking/mrcImpressions2",
        ],
        "scriptMeasurers": Object {
          "nonce": "",
          "scripts": Array [
            Object {
              "actualVersion": 67,
              "conf": Object {
                "aap": 21,
                "account": 22,
                "hitlogid": "3046634730863752911",
                "tte": 23,
              },
              "id": "weborama",
            },
            Object {
              "actualVersion": 67,
              "conf": Object {
                "creatype": "2",
                "hitlogid": "3046634730863752911",
                "id1": "yandex.ru/?test=123",
                "id10": "test2",
                "id2": "52468215",
                "id5": "9167125079",
                "id7": "56963047",
                "id9": "3046634730863752911",
                "tagid": "880",
              },
              "id": "adloox",
            },
          ],
        },
        "shows": Array [
          "https://an.yandex.ru/count/count_1",
          "https://an.yandex.ru/rtbCount/tail",
          "https://an.yandex.ru/head+tail_1?stat-id=1",
        ],
        "statPath": "backfill_tgo",
      },
      "direct",
    ],
    Array [
      "refresh",
      Object {
        "conf": Object {
          "overlapping_timeout": 111,
          "params": Object {},
          "refresh_counts": 222,
          "refresh_url": undefined,
          "tab_timeout": 333,
          "watch_timeout": 444,
        },
        "skipBanner": 6529330059,
      },
      "banner",
    ],
    Array [
      "logs",
      Array [
        Object {
          "action": "отрисовка баннера на сервере",
          "params": Object {
            "id": 6529330059,
            "баннер": "backfill_tgo",
          },
          "time": 0,
        },
      ],
      "banner",
    ],
    Array [
      "name",
      "backfill_tgo",
      "banner",
    ],
  ],
}
`;

exports[`b-banner rtbmeta-empty + statpixel 1`] = `
Object {
  "html": "",
  "resources": Array [],
  "settingsJs": Array [
    Array [
      "pages",
      "123",
      "banner",
    ],
    Array [
      "data",
      Object {
        "content": "main",
      },
      "bannerInventory",
    ],
    Array [
      "name",
      "empty",
      "banner",
    ],
  ],
}
`;

exports[`b-banner rtbmeta-iframe + statpixel 1`] = `
Object {
  "html": "<div  class=\\"b-banner\\"><div  class=\\"b-banner__content \\"><div  class=\\"b-banner__wrapper\\"><div  class=\\"rtb\\"><div  class=\\"rtb-iframe\\"></div><div  class=\\"rtb-border\\"></div><a class=\\"home-link2 rtb-iframe__click-area\\" href=\\"clickUrl\\" target=\\"_blank\\" rel=\\"noopener\\"></a></div></div></div></div>",
  "resources": Array [
    Array [
      "
    .rtb-iframe {
        overflow: hidden;
        width: calc(728px + 0px);
        height: calc(90px + 0px);
    }
    .rtb-iframe__content {
        display: block;
        width: calc(728px + 0px);
        height: calc(90px + 0px);
        margin: 0;
        border: 0;
    }
    ",
      "inline-css",
    ],
  ],
  "settingsJs": Array [
    Array [
      "pages",
      "123",
      "banner",
    ],
    Array [
      "counters",
      Object {
        "mrcImpressions": Array [
          "https://yabs.yandex.ru/tracking/mrcImpressions1",
          "https://yabs.yandex.ru/tracking/mrcImpressions2",
        ],
        "scriptMeasurers": Object {
          "nonce": "",
          "scripts": Array [
            Object {
              "actualVersion": 67,
              "conf": Object {
                "aap": 21,
                "account": 22,
                "hitlogid": "3046634730863752911",
                "tte": 23,
              },
              "id": "weborama",
            },
            Object {
              "actualVersion": 67,
              "conf": Object {
                "creatype": "2",
                "hitlogid": "3046634730863752911",
                "id1": "yandex.ru/?test=123",
                "id10": "test2",
                "id2": "52468215",
                "id5": "9167125079",
                "id7": "56963047",
                "id9": "3046634730863752911",
                "tagid": "880",
              },
              "id": "adloox",
            },
          ],
        },
        "shows": Array [
          "https://an.yandex.ru/count/count_1",
          "https://an.yandex.ru/rtbCount/tail",
        ],
        "statPath": "backfill_media_iframe",
      },
      "rtb",
    ],
    Array [
      "settings",
      Object {
        "basePath": "https://storage.mds.yandex.net/get-canvas-html5/1003119/bf1f886a-e526-4c09-941f-80679eac8854/",
        "height": 90,
        "html": "<HTML 5 RTB content>",
        "isMedia": false,
        "mordaType": "desktop",
        "resize": false,
        "type": "iframe",
        "width": 728,
      },
      "rtb",
    ],
    Array [
      "refresh",
      Object {
        "conf": Object {
          "overlapping_timeout": 111,
          "params": Object {},
          "refresh_counts": 222,
          "refresh_url": undefined,
          "tab_timeout": 333,
          "watch_timeout": 444,
        },
        "skipBanner": false,
      },
      "banner",
    ],
    Array [
      "logs",
      Array [
        Object {
          "action": "отрисовка баннера на сервере",
          "params": Object {
            "id": 6561502500,
            "баннер": "backfill_media_iframe",
          },
          "time": 0,
        },
      ],
      "banner",
    ],
    Array [
      "name",
      "backfill_media_iframe",
      "banner",
    ],
  ],
}
`;

exports[`b-banner rtbmeta-iframe[antiadblock] + statpixel 1`] = `
Object {
  "html": "<div  class=\\"b-banner\\"><div  class=\\"b-banner__content \\"><div  class=\\"b-banner__wrapper\\"><div  class=\\"rtb\\"><div  class=\\"rtb-iframe\\"></div><div  class=\\"rtb-border\\"></div><a class=\\"home-link2 rtb-iframe__click-area\\" href=\\"clickUrl\\" target=\\"_blank\\" rel=\\"noopener\\"></a></div></div></div></div>",
  "resources": Array [
    Array [
      "
    .rtb-iframe {
        overflow: hidden;
        width: calc(728px + 0px);
        height: calc(90px + 0px);
    }
    .rtb-iframe__content {
        display: block;
        width: calc(728px + 0px);
        height: calc(90px + 0px);
        margin: 0;
        border: 0;
    }
    ",
      "inline-css",
    ],
  ],
  "settingsJs": Array [
    Array [
      "pages",
      "123",
      "banner",
    ],
    Array [
      "counters",
      Object {
        "mrcImpressions": Array [
          "https://yabs.yandex.ru/tracking/mrcImpressions1",
          "https://yabs.yandex.ru/tracking/mrcImpressions2",
        ],
        "scriptMeasurers": Object {
          "nonce": "",
          "scripts": Array [
            Object {
              "actualVersion": 67,
              "conf": Object {
                "aap": 21,
                "account": 22,
                "hitlogid": "3046634730863752911",
                "tte": 23,
              },
              "id": "weborama",
            },
            Object {
              "actualVersion": 67,
              "conf": Object {
                "creatype": "2",
                "hitlogid": "3046634730863752911",
                "id1": "yandex.ru/?test=123",
                "id10": "test2",
                "id2": "52468215",
                "id5": "9167125079",
                "id7": "56963047",
                "id9": "3046634730863752911",
                "tagid": "880",
              },
              "id": "adloox",
            },
          ],
        },
        "shows": Array [
          "https://an.yandex.ru/count/count_1",
          "https://an.yandex.ru/rtbCount/tail",
        ],
        "statPath": "backfill_media_iframe",
      },
      "rtb",
    ],
    Array [
      "settings",
      Object {
        "basePath": "https://storage.mds.yandex.net/get-canvas-html5/1003119/bf1f886a-e526-4c09-941f-80679eac8854/",
        "height": 90,
        "html": "<HTML 5 RTB content>",
        "isMedia": false,
        "mordaType": "desktop",
        "resize": false,
        "type": "iframe",
        "width": 728,
      },
      "rtb",
    ],
    Array [
      "refresh",
      Object {
        "conf": Object {
          "overlapping_timeout": 111,
          "params": Object {},
          "refresh_counts": 222,
          "refresh_url": undefined,
          "tab_timeout": 333,
          "watch_timeout": 444,
        },
        "skipBanner": false,
      },
      "banner",
    ],
    Array [
      "logs",
      Array [
        Object {
          "action": "отрисовка баннера на сервере",
          "params": Object {
            "id": 6561502500,
            "баннер": "backfill_media_iframe",
          },
          "time": 0,
        },
      ],
      "banner",
    ],
    Array [
      "name",
      "backfill_media_iframe",
      "banner",
    ],
  ],
}
`;

exports[`b-banner rtbmeta-image + statpixel 1`] = `
Object {
  "html": "<div  class=\\"b-banner\\"><div  class=\\"b-banner__content \\"><div  class=\\"b-banner__wrapper\\"><div  class=\\"rtb\\"><a rel=\\"noopener\\" class=\\"home-link2 rtb__link\\" href=\\"clickUrl\\" target=\\"_blank\\"><div  class=\\"rtb-image\\"></div><div  class=\\"rtb-border\\"></div></a></div></div></div></div>",
  "resources": Array [
    Array [
      "
    .rtb-image {
        background-image: url('https://storage.mds.yandex.net/get-canvas-html5/1003119/bf1f886a-e526-4c09-941f-80679eac8854/image.jpg');
        background-position: 0 0;
        background-size: 100% auto;
        background-repeat: no-repeat;
        cursor: pointer;
    }
    ",
      "inline-css",
    ],
  ],
  "settingsJs": Array [
    Array [
      "pages",
      "123",
      "banner",
    ],
    Array [
      "bannerMainImage",
      "https://storage.mds.yandex.net/get-canvas-html5/1003119/bf1f886a-e526-4c09-941f-80679eac8854/image.jpg",
      "timing",
    ],
    Array [
      "counters",
      Object {
        "mrcImpressions": Array [
          "https://yabs.yandex.ru/tracking/mrcImpressions1",
          "https://yabs.yandex.ru/tracking/mrcImpressions2",
        ],
        "scriptMeasurers": Object {
          "nonce": "",
          "scripts": Array [
            Object {
              "actualVersion": 67,
              "conf": Object {
                "aap": 21,
                "account": 22,
                "hitlogid": "3046634730863752911",
                "tte": 23,
              },
              "id": "weborama",
            },
            Object {
              "actualVersion": 67,
              "conf": Object {
                "creatype": "2",
                "hitlogid": "3046634730863752911",
                "id1": "yandex.ru/?test=123",
                "id10": "test2",
                "id2": "52468215",
                "id5": "9167125079",
                "id7": "56963047",
                "id9": "3046634730863752911",
                "tagid": "880",
              },
              "id": "adloox",
            },
          ],
        },
        "shows": Array [
          "https://an.yandex.ru/count/count_1",
          "https://an.yandex.ru/rtbCount/tail",
        ],
        "statPath": "backfill_media_image",
      },
      "rtb",
    ],
    Array [
      "settings",
      Object {
        "isMedia": false,
        "isNtp": undefined,
        "mordaType": "desktop",
        "type": "image",
      },
      "rtb",
    ],
    Array [
      "refresh",
      Object {
        "conf": Object {
          "overlapping_timeout": 111,
          "params": Object {},
          "refresh_counts": 222,
          "refresh_url": undefined,
          "tab_timeout": 333,
          "watch_timeout": 444,
        },
        "skipBanner": false,
      },
      "banner",
    ],
    Array [
      "logs",
      Array [
        Object {
          "action": "отрисовка баннера на сервере",
          "params": Object {
            "id": 6561502500,
            "баннер": "backfill_media_image",
          },
          "time": 0,
        },
      ],
      "banner",
    ],
    Array [
      "name",
      "backfill_media_image",
      "banner",
    ],
  ],
}
`;

exports[`b-banner rtbmeta-image[antiadblock] + statpixel 1`] = `
Object {
  "html": "<div  class=\\"b-banner\\"><div  class=\\"b-banner__content \\"><div  class=\\"b-banner__wrapper\\"><div  class=\\"rtb\\"><div  class=\\"rtb-image\\"></div><div  class=\\"rtb-border\\"></div></div></div></div></div>",
  "resources": Array [
    Array [
      "
    .rtb-image {
        background-image: url('https://storage.mds.yandex.net/get-canvas-html5/1003119/bf1f886a-e526-4c09-941f-80679eac8854/image.jpg');
        background-position: 0 0;
        background-size: 100% auto;
        background-repeat: no-repeat;
        cursor: pointer;
    }
    ",
      "inline-css",
    ],
  ],
  "settingsJs": Array [
    Array [
      "pages",
      "123",
      "banner",
    ],
    Array [
      "bannerMainImage",
      "https://storage.mds.yandex.net/get-canvas-html5/1003119/bf1f886a-e526-4c09-941f-80679eac8854/image.jpg",
      "timing",
    ],
    Array [
      "counters",
      Object {
        "mrcImpressions": Array [
          "https://yabs.yandex.ru/tracking/mrcImpressions1",
          "https://yabs.yandex.ru/tracking/mrcImpressions2",
        ],
        "scriptMeasurers": Object {
          "nonce": "",
          "scripts": Array [
            Object {
              "actualVersion": 67,
              "conf": Object {
                "aap": 21,
                "account": 22,
                "hitlogid": "3046634730863752911",
                "tte": 23,
              },
              "id": "weborama",
            },
            Object {
              "actualVersion": 67,
              "conf": Object {
                "creatype": "2",
                "hitlogid": "3046634730863752911",
                "id1": "yandex.ru/?test=123",
                "id10": "test2",
                "id2": "52468215",
                "id5": "9167125079",
                "id7": "56963047",
                "id9": "3046634730863752911",
                "tagid": "880",
              },
              "id": "adloox",
            },
          ],
        },
        "shows": Array [
          "https://an.yandex.ru/count/count_1",
          "https://an.yandex.ru/rtbCount/tail",
        ],
        "statPath": "backfill_media_image",
      },
      "rtb",
    ],
    Array [
      "settings",
      Object {
        "href": "clickUrl",
        "isMedia": false,
        "isNtp": undefined,
        "mordaType": "desktop",
        "type": "image",
      },
      "rtb",
    ],
    Array [
      "refresh",
      Object {
        "conf": Object {
          "overlapping_timeout": 111,
          "params": Object {},
          "refresh_counts": 222,
          "refresh_url": undefined,
          "tab_timeout": 333,
          "watch_timeout": 444,
        },
        "skipBanner": false,
      },
      "banner",
    ],
    Array [
      "logs",
      Array [
        Object {
          "action": "отрисовка баннера на сервере",
          "params": Object {
            "id": 6561502500,
            "баннер": "backfill_media_image",
          },
          "time": 0,
        },
      ],
      "banner",
    ],
    Array [
      "name",
      "backfill_media_image",
      "banner",
    ],
  ],
}
`;
